k8s/7-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudops-ingress
  namespace: dev
  annotations:
    # Uses standard NGINX Ingress Controller (matches Hekma's setup)
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # 1. Route all API calls directly to the Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          # 2. Route Kubernetes health check directly to Backend
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          # 3. Route root and all website assets to Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
